# research-agent

./: .gitignore  LICENSE  README.md  _self_patch.py  initial_prompt.md  pyproject.toml  research_agent.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: api.html  design.html  index.html  styles.css
tasks/: lessons.md  todo.md
